src/test/resources/frontendReference/invalid/semanticErr/variables/undeclaredScopeVar.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 15:2 -- Variable x is not defined in this scope
